# 1985

./: .gitignore  1985.1  1985.conf.example  1985.spec  Development.md  FLATPAK.md  INSTALL.md  Makefile.am  README.md  STATUS.md  USAGE.md  configure.ac  io.github.salvogendut.Emulator1985.desktop  io.github.salvogendut.Emulator1985.metainfo.xml  io.github.salvogendut.Emulator1985.yml
.github/workflows/: build.yml
Original CPM Boot Disks/Boot files/: B180.FIB  J14CPM3.EMS  J17CPM3.EMS
icons/: 1985.rc
packaging/: 1985-web.service.in
roms/: README.md
src/: asic.c  asic.h  aysound.c  aysound.h  beeper.c  beeper.h  bootstrap.c  bootstrap.h  compat_win.h  config.c  config.h  cps.c  cps.h  crtc.c  crtc.h  disk.c  disk.h  display.c  display.h  fdc.c  fdc.h  ffmpeg_gif.c  ffmpeg_gif.h  gifcap.c  gifcap.h  input_types.h  kbd.c  kbd.h  leds.c  leds.h  main.c  mem.c  mem.h  monitor.c  monitor.h  multilink.c  multilink.h  notify.c  notify.h  overlay.c  (+34 more)
tests/: test.conf  test_drive_a_write.sh  test_drive_b_write.sh  test_gifcap.c  test_pcwmouse.c
tools/: extract_iotrace.awk  gen_webgui_page.sh  mkblank.c  pty_modem.py  snap_analyze.c
